# car-analyser

./: README.md  api.py  main.py  models.py  pyproject.toml  services.py  setup.py  utils.py
gradio/: upload_ui.py
llms/: llm.py
routers/: analyse_router.py
services/: analyze.py
