[project]
name = "car-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "gradio>=5.38.1",
    "langchain-ollama>=0.3.6",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
]
